# MediaPipe_SpaceInvaders

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Entity/: Bullet.cpp  Bullet.h  EntityState.h  Monster.cpp  Monster.h  MonsterCluster.cpp  MonsterCluster.h  Player.cpp  Player.h
src/GameProcessing/: Collisions.cpp  Collisions.h  Score.cpp  Score.h
src/HandTracking/: HandTracker.cpp  HandTracker.h
